--- a/src/variant-mono/styles/media.css
+++ b/src/variant-mono/styles/media.css
@@ -70,4 +70,8 @@
   #container {
     max-width: 54rem;
   }
+
+  .navigation {
+    max-width: 53rem;
+  }
 }
